--- a/src/app/pages/dashboard-components/simulation/simulation.component.html
+++ b/src/app/pages/dashboard-components/simulation/simulation.component.html
@@ -1,1 +1,94 @@
-<p>simulation works!</p>
+<div class="container">
+    <div class="row align-items-center justify-content-center m-3">
+        <div class="col-lg-8">
+            <div class="row p-1 block">
+                <label for="colFormLabelLg" class="col-sm-9 col-form-label col-form-label-lg">1. Amount</label>
+                <div class="col-sm-3">
+                    <input type="number" class="form-control form-control-lg" id="colFormLabelLg"
+                       >
+                </div>
+            </div>
+            <div class="row p-1 block mt-3">
+                <label for="colFormLabelLg" class="col-sm-9 col-form-label col-form-label-lg">2. Interest Rate</label>
+                <div class="col-sm-3">
+                    <input type="number" class="form-control form-control-lg" id="colFormLabelLg"
+                       >
+                </div>
+            </div>
+
+            <div class="row p-1 block mt-3">
+                <label for="colFormLabelLg" class="col-sm-9 col-form-label col-form-label-lg">3. Duration (month) </label>
+                <div class="col-sm-3">
+                    <input type="number" class="form-control form-control-lg" id="colFormLabelLg"
+                       >
+                </div>
+            </div>
+
+            <div class="row mt-3">
+                <button type="button" class="btn btn-outline-primary">Calculate</button>
+            </div>
+            
+        </div>
+    </div>
+</div>
+
+
+<div class="row mt-3 ">
+<div class="col-lg-12">
+    <h2 class="card-title">Calculated Results</h2>
+</div>
+
+    <div class="col-xxl-4 col-md-4">
+        <div class="card info-card sales-card">
+            <div class="card-body">
+                <h5 class="card-title ">Total Amount</h5>
+
+                <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                        <i class="bi bi-">MAD</i>
+                    </div>
+                    <div class="ps-3">
+                        <h6>100 450</h6>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-xxl-4 col-md-4">
+        <div class="card info-card sales-card">
+            <div class="card-body">
+                <h5 class="card-title ">Total Interest</h5>
+
+                <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                        <i class="bi bi-">%</i>
+                    </div>
+                    <div class="ps-3">
+                        <h6>17</h6>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-xxl-4 col-md-4">
+        <div class="card info-card sales-card">
+            <div class="card-body">
+                <h5 class="card-title ">Monthly Payment</h5>
+
+                <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                        <i class="bi bi-">MAD</i>
+                    </div>
+                    <div class="ps-3">
+                        <h6>1450</h6>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
