--- a/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -3,15 +3,7 @@
 
 <main id="main" class="main">
 
-    <div class="pagetitle">
-        <h1>Tableau de bord</h1>
-        <nav>
-            <ol class="breadcrumb">
-
-                <li class="breadcrumb-item active">Liste article</li>
-            </ol>
-        </nav>
-    </div><!-- End Page Title -->
+   
 
     <section class="section dashboard">
         <div class="row">
@@ -22,4 +14,4 @@
 </main><!-- End #main -->
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
