sim & statistique implementation

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -17,22 +17,25 @@
                     <div class="col-12">
                       <label for="email" class="form-label">Email</label>
                       <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend"></span>
+                        <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
                         <input type="text" name="username" [(ngModel)]="authenticationRequest.email" class="form-control" id="email" required>
                         <div class="invalid-feedback">Veuillez saisir votre Email.</div>
                       </div>
                     </div>
   
                     <div class="col-12">
-                      <label for="password" class="form-label">Password</label>
+                      <div class="row">
+                        <label for="password" class="form-label col-lg-5">Password</label>
+                        <a [routerLink]="['/forgot']" class="col-lg-7" >Mot de passe oublié ?</a>
+                      </div>
                       <input type="password" name="password" [(ngModel)]="authenticationRequest.password" class="form-control" id="password" required>
                       <div class="invalid-feedback">Veuillez saisir votre mot de passe!</div>
                     </div>
   
-                    <div class="col-12">
-                      <button class="btn btn-light w-100" (click)="login()">Login</button>
+                    <div class="col-12 mt-1">
+                      <button class="btn btn-primary w-100" (click)="login()">Login</button>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 mt-3">
                       <p class="small mb-0">Pas de compte ? <a [routerLink]="['/register']">Créer un nouveau compte</a></p>
                     </div>
                   </div>
