--- a/src/app/pages/dashboard-components/header/header.component.html
+++ b/src/app/pages/dashboard-components/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="" class="logo d-flex align-items-center">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <span class="d-none d-lg-block">Gestion de Stock</span>
+        <span class="d-none d-lg-block">Simulateur</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
