--- a/src/app/pages/dashboard-components/simulation/simulation.component.html
+++ b/src/app/pages/dashboard-components/simulation/simulation.component.html
@@ -1,42 +1,43 @@
 <div class="container">
-    <div class="row align-items-center justify-content-center m-3">
-        <div class="col-lg-8">
-            <div class="row p-1 block">
-                <label for="colFormLabelLg" class="col-sm-9 col-form-label col-form-label-lg">1. Amount</label>
-                <div class="col-sm-3">
-                    <input type="number" class="form-control form-control-lg" id="colFormLabelLg"
-                       >
+    <form #f="ngForm" (ngSubmit)="onSearch(f.value)">
+        <div class="row align-items-center justify-content-center m-3">
+            <div class="col-lg-8">
+                <div class="row p-1 block">
+                    <label for="colFormLabelLg" class="col-sm-9 col-form-label col-form-label-lg">1. Amount</label>
+                    <div class="col-sm-3">
+                        <input type="number" name="amount" class="form-control form-control-lg" ngModel id="colFormLabelLg">
+                    </div>
                 </div>
-            </div>
-            <div class="row p-1 block mt-3">
-                <label for="colFormLabelLg" class="col-sm-9 col-form-label col-form-label-lg">2. Interest Rate</label>
-                <div class="col-sm-3">
-                    <input type="number" class="form-control form-control-lg" id="colFormLabelLg"
-                       >
+                <div class="row p-1 block mt-3">
+                    <label for="colFormLabelLg" class="col-sm-9 col-form-label col-form-label-lg">2. Interest
+                        Rate</label>
+                    <div class="col-sm-3">
+                        <input type="number" name="interestRate" class="form-control form-control-lg" ngModel id="colFormLabelLg">
+                    </div>
                 </div>
-            </div>
 
-            <div class="row p-1 block mt-3">
-                <label for="colFormLabelLg" class="col-sm-9 col-form-label col-form-label-lg">3. Duration (month) </label>
-                <div class="col-sm-3">
-                    <input type="number" class="form-control form-control-lg" id="colFormLabelLg"
-                       >
+                <div class="row p-1 block mt-3">
+                    <label for="colFormLabelLg" class="col-sm-9 col-form-label col-form-label-lg">3. Duration (month)
+                    </label>
+                    <div class="col-sm-3">
+                        <input type="number" name="duration" class="form-control form-control-lg" ngModel id="colFormLabelLg">
+                    </div>
                 </div>
-            </div>
 
-            <div class="row mt-3">
-                <button type="button" class="btn btn-outline-primary">Calculate</button>
+                <div class="row mt-3">
+                    <button type="submit" class="btn btn-outline-primary">Calculate</button>
+                </div>
+
             </div>
-            
         </div>
+    </form>
+</div>
+
+
+<div *ngIf="results" class="row mt-3 ">
+    <div class="col-lg-12">
+        <h2 class="card-title">Calculated Results</h2>
     </div>
-</div>
-
-
-<div class="row mt-3 ">
-<div class="col-lg-12">
-    <h2 class="card-title">Calculated Results</h2>
-</div>
 
     <div class="col-xxl-4 col-md-4">
         <div class="card info-card sales-card">
@@ -48,7 +49,7 @@
                         <i class="bi bi-">MAD</i>
                     </div>
                     <div class="ps-3">
-                        <h6>100 450</h6>
+                        <h6>{{ totalAmount | number:'1.2-2' }}</h6>
 
                     </div>
                 </div>
@@ -66,7 +67,7 @@
                         <i class="bi bi-">%</i>
                     </div>
                     <div class="ps-3">
-                        <h6>17</h6>
+                        <h6>{{ totalInterestRate | number:'1.2-2'  }}</h6>
 
                     </div>
                 </div>
@@ -84,11 +85,18 @@
                         <i class="bi bi-">MAD</i>
                     </div>
                     <div class="ps-3">
-                        <h6>1450</h6>
+                        <h6>{{ results.monthly | number:'1.2-2' }}</h6>
 
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <app-pie-chart 
+    [totalAmount]="totalAmount" 
+    [totalInterestRate]="totalInterestRate" 
+    [monthly]="results.monthly">
+
+  </app-pie-chart>
 </div>
