--- a/src/app/pages/forgot-password-page/forgot-password-page.component.html
+++ b/src/app/pages/forgot-password-page/forgot-password-page.component.html
@@ -1,1 +1,41 @@
-<p>forgot-password-page works!</p>
+<main>
+    <div class="container">
+      <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
+              <div class="card mb-3">
+                <div class="card-body">
+                  <div class="pt-4 pb-2">
+                    <h5 class="card-title text-center pb-0 fs-4">Réinitialiser votre mot de passe</h5>
+                    <p class="text-center small">Saisissez l'adresse email vérifiée de votre compte utilisateur, et nous vous enverrons un lien pour réinitialiser votre mot de passe</p>
+                  </div>
+                  <div class="alert alert-danger" *ngIf="errorMessage">
+                    {{errorMessage}}
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <label for="email" class="form-label">Email</label>
+                      <div class="input-group has-validation">
+                        <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
+                        <input type="text" name="username" [(ngModel)]="resetPasswordRequest.email" class="form-control" id="email" required>
+                        <div class="invalid-feedback">Veuillez saisir votre Email.</div>
+                      </div>
+                    </div>
+  
+                   
+  
+                    <div class="col-12 mt-3 ">
+                      <button class="btn btn-primary w-100" (click)="forgotPassword()">Demander mail de réinitialisation </button>
+                    </div>
+                
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
+  
