--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -1,1 +1,69 @@
-<p>register-page works!</p>
+<main>
+    <div class="container">
+
+      <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
+
+              <div class="card mb-3">
+
+                <div class="card-body">
+                  <div class="alert alert-danger" *ngIf="errorMsg.length > 0">
+                    <div *ngFor="let msg of errorMsg">
+                      <span >{{msg}}</span>
+                    </div>
+                  </div>
+                  <div class="pt-4 pb-2">
+                    <h5 class="card-title text-center pb-0 fs-4">Création de compte</h5>
+                    <p class="text-center small">Saisir vos infos de création de compte</p>
+                  </div>
+
+                  <div class="row g-3">
+                    <div class="col-12">
+                      <label for="" class="form-label">Nom</label>
+                      <input type="text" name="name" class="form-control" [(ngModel)]="registrationRequest.lastname" >
+                      <div class="invalid-feedback">Renseignez le nom !</div>
+                    </div>
+
+                    <div class="col-12">
+                      <label for="" class="form-label">Prénom</label>
+                      <input type="text" name="prenom" [(ngModel)]="registrationRequest.firstname" class="form-control"  >
+                      <div class="invalid-feedback">Renseignez le prénom !</div>
+                    </div>
+
+                    <div class="col-12">
+                      <label for="" class="form-label">Adresse Email</label>
+                      <div class="input-group has-validation">
+                        <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
+                        <input type="email" name="username" [(ngModel)]="registrationRequest.email" class="form-control"  >
+                        <div class="invalid-feedback">Renseignez votre adresse adresse mail !</div>
+                      </div>
+                    </div>
+
+                    <div class="col-12">
+                      <label for="" class="form-label">Password</label>
+                      <input type="password" name="password" [(ngModel)]="registrationRequest.password" class="form-control"  >
+                      <div class="invalid-feedback">Renseignez le mot de passe !</div>
+                    </div>
+
+                  
+                    <div class="col-12">
+                      <button class="btn btn-primary w-100" (click)="register()" >Create Account</button>
+                    </div>
+                    <div class="col-12">
+                      <p class="small mb-0">Déjà un compte ? <a [routerLink]="['/login']" >Log in</a></p>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+    </div>
+  </main><!-- End #main -->
